# NewKernelBench

./: .gitattributes  .gitignore  README.md  pyproject.toml
docs/: architecture.md  encoding.md  github-backup.md  harvesting.md  performance-tools.md  verification-2026-04-17.md
docs/adr/: 0001-multi-axis-task-schema.md  0002-tiered-analysis-pipeline.md
docs/plans/: 2026-04-16-newkernelbench-design.md
examples/candidates/: 1_conv2d_relu_biasadd_modelnew.py  1_square_matmul_modelnew.py
scripts/: bootstrap_from_kernelbench.py  check_encoding.py  harvest_library_candidates.py  manual_profile_demo.py  ncu_profile_task.py  preview_benchmark.py  run_candidate_benchmark.py  smoke_runtime_validation.py
src/newkernelbench/: __init__.py  analysis_plan.py  candidate_loader.py  catalog.py  evaluator.py  kernelbench_adapter.py  planner.py  report.py  schema.py  task_loader.py  taxonomy.py  variants.py
