[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "newkernelbench"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = []

[project.optional-dependencies]
runtime = [
    "torch>=2.1",
]
dev = [
    "pytest",
    "ruff",
]

[tool.setuptools.packages.find]
where = ["src"]
include = ["newkernelbench*"]
